--- a/style.css
+++ b/style.css
@@ -1,21 +1,16 @@
 body {
-  background-color: lightblue;
+  background-color: rgb(247, 247, 247);
 }
 
 h1 {
-  color: white;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 h2 {
-  color: white;
-  text-align: center;
-}
-h3 {
-  color: white;
-  text-align: center;
+  color: rgb(0, 0, 0);
 }
 
 p {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 25px;
 }
